--- a/src/lesson_14_hmw/lesson_14_hmw.html
+++ b/src/lesson_14_hmw/lesson_14_hmw.html
@@ -11,11 +11,8 @@
     <title key="title"></title>
   </head>
   <body>
-    <h1>Hello from lesson_11_hmw</h1>
-    <button id="func-1">func-1</button>
-    <br />
-    <button id="func-2">func-2</button>
-    <br />
-    <button id="func-3">func-3</button>
+    <h1>Hello from lesson_14_hmw</h1>
+    <h2>Accorion</h2>
+    <div class="mainWrap"></div>
   </body>
 </html>
