--- a/src/meet_6_hmw/meet_6_hmw.html
+++ b/src/meet_6_hmw/meet_6_hmw.html
@@ -11,11 +11,13 @@
     <title key="title"></title>
   </head>
   <body>
-    <h1>Hello from lesson_11_hmw</h1>
-    <button id="func-1">func-1</button>
-    <br />
-    <button id="func-2">func-2</button>
-    <br />
-    <button id="func-3">func-3</button>
+    <div class="h1_wrap">
+      <h1>Homework: "Christmas garland"</h1>
+    </div>
+
+    <div class="garland-block__wrap">
+      <!-- <button class="garland-block__button"></button>
+      <div class="garland-block__lights"></div> -->
+    </div>
   </body>
 </html>
