--- a/src/meet_7/meet_7.html
+++ b/src/meet_7/meet_7.html
@@ -11,11 +11,7 @@
     <title key="title"></title>
   </head>
   <body>
-    <h1>Hello from lesson_11_hmw</h1>
-    <button id="func-1">func-1</button>
-    <br />
-    <button id="func-2">func-2</button>
-    <br />
-    <button id="func-3">func-3</button>
+    <h1>Hello from meet_7</h1>
+    <div class="container"></div>
   </body>
 </html>
