--- a/src/meeting_6/meeting_6.html
+++ b/src/meeting_6/meeting_6.html
@@ -11,11 +11,10 @@
     <title key="title"></title>
   </head>
   <body>
-    <h1>Hello from lesson_11_hmw</h1>
-    <button id="func-1">func-1</button>
-    <br />
-    <button id="func-2">func-2</button>
-    <br />
-    <button id="func-3">func-3</button>
+    <div class="h1__wrap">
+      <h1>Hello from meeting_6</h1>
+    </div>
+    <!-- <div class="image__wrap"></div> -->
+    <button class="btn">Add element</button>
   </body>
 </html>
