--- a/src/index/index.html
+++ b/src/index/index.html
@@ -45,5 +45,5 @@
     <br />
     <a href="./lesson_14_hmw.html" data-testid="lesson_14_hmw">lesson_14_hmw</a>
     <br />
-  <a href='./meet_7.html' data-testid='meet_7'>meet_7</a></body>
+  <a href='./meet_7.html' data-testid='meet_7'>meet_7</a><a href='./lesson_16_hmw.html' data-testid='lesson_16_hmw'>lesson_16_hmw</a></body>
 </html>
