--- a/src/final/final.html
+++ b/src/final/final.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="http://localhost:35729/livereload.js"></script>
-  <title key='title'></title>
-</head>
-<body>
-  <h1>Hello from final</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="http://localhost:35729/livereload.js"></script>
+    <title key="title"></title>
+  </head>
+  <body>
+    <main class="main__wrap">
+      <div class="main__slider">
+        <div class="slider__btn_left">
+          <div class="arrow__left"></div>
+        </div>
+        <h1><div class="title-page"></div></h1>
+        <div class="slider__btn_right">
+          <div class="arrow__right"></div>
+        </div>
+      </div>
+
+      <div class="main__dataBlock">
+        <div class="main__nav">
+          <div class="btn__small">
+            <span class="line__hor"></span>
+            <span class="line__vert"></span>
+          </div>
+          <span><ul class="nav__ul"></ul></span>
+          <div class="nav__layout">
+            <div class="layout__block"></div>
+            <div class="layout__list"></div>
+          </div>
+        </div>
+
+        <div class="main__content"></div>
+      </div>
+      <div class="footer">
+        <div class="footer__first">
+          <div class="title-page"></div>
+          <div class="footer__nav">
+            <ul class="footer__nav-ul"></ul>
+          </div>
+        </div>
+        <div class="footer__second">
+          <div class="footer__copy">
+            Designed by Milan Houter. All rights reserved.
+          </div>
+          <div class="footer__media">
+            <ul class="footer__media-ul"></ul>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
